# Spaceship

./: .gitignore  CMakeLists _old.txt  CMakeLists.txt  README.md  logo.rc  ressource.qrc
Projet/other/: Score.csv
Projet/src/: Asteroid.cpp  Asteroid.h  Bonus.cpp  Bonus.h  BonusPV.cpp  BonusPV.h  Boss.cpp  Boss.h  Enemies.cpp  Enemies.h  GameOver.cpp  GameOver.h  GameRetry.cpp  GameRetry.h  GameScene.cpp  GameScene.h  Life.cpp  Life.h  MainWindow.cpp  MainWindow.h  Menu.cpp  Menu.h  Musique.cpp  Musique.h  Score.cpp  Score.h  Shoot.cpp  Shoot.h  SpaceShip.cpp  SpaceShip.h  main.cpp
